reports/workspace/devops-scan-w5-003/projects/autonomous-ai/analysis-error.log

Traceback (most recent call last):
  File "/home/main/devops/atomic-kernel/runtime/atomic_kernel/repo_analysis.py", line 157, in analyze_repo
    frame = ingest_python_to_asg(source, rel, namespace)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/main/devops/atomic-kernel/runtime/atomic_kernel/asg.py", line 112, in ingest_python_to_asg
    tree = ast.parse(source, filename=source_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "packages/universal-communication-protocol/pocketflow.py", line 1
    yes thats perfect. look at this project someone named called pocketflow. its open source.  tell me if it will enhace this for agents
        ^^^^^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/main/devops/atomic-kernel/scripts/semantic-analyze.py", line 45, in <module>
    raise SystemExit(main())
                     ^^^^^^
  File "/home/main/devops/atomic-kernel/scripts/semantic-analyze.py", line 27, in main
    report = analyze_repo(
             ^^^^^^^^^^^^^
  File "/home/main/devops/atomic-kernel/runtime/atomic_kernel/repo_analysis.py", line 181, in analyze_repo
    raise RepoAnalysisError(f"failed analyzing {rel}: {exc}") from exc
runtime.atomic_kernel.repo_analysis.RepoAnalysisError: failed analyzing packages/universal-communication-protocol/pocketflow.py: invalid syntax (pocketflow.py, line 1)
